# amazon_ai_chatbot

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  test.ipynb
chatbot/: chain.py  document_loader.py  main.py  prompt.py
data_pipeline/: etl.py  transformed_product_data.csv
rag_chain/: chain.py  document_loader.py
research_notebook/: amazon_rag.ipynb
